--- a/style.css
+++ b/style.css
@@ -7,14 +7,22 @@
     font-family: 'Roboto';
 }
 
+body {
+    font-size: 18px;
+}
+
 .container {
     max-width: 1100px;
     margin: 0 auto;
 }
 
-.navbar {
+.navbar, 
+.hero {
     background-color: #1f2937;
     color: #f9faf8;
+}
+
+.navbar {
     height: 60px;
 }
 
@@ -38,5 +46,52 @@
 .navbar a {
     text-decoration: none;
     color: #e5e7eb;
+}
+
+.hero {
+    padding: 32px 0;
+}
+
+.hero .container {
+    display: flex;
+    justify-content: cetner;
+    align-items: center;
+    gap: 16px;
+}
+
+.hero .description-container,
+.hero .image-container {
+    flex: 1;
+}
+
+.hero h2, 
+.hero p {
+    margin-bottom: 12px;
+}
+
+.hero h2 {
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.hero p {
+    color: #e5e7eb;
+}
+
+.hero button {
+    background-color: #3882f6;
+    color: #f9faf8;
     font-size: 18px;
+    padding: 8px 32px;
+    border: none;
+    border-radius: 12px;
+}
+
+.hero .image-container {
+    display: flex;
+    justify-content: center;
+}
+
+.hero img {
+    max-height: 300px;
 }
