--- a/style.css
+++ b/style.css
@@ -123,3 +123,21 @@ body {
     border: 5px solid #3882f6;
     border-radius: 12px;
 }
+
+.quote {
+    background-color: #e5e7eb;
+    padding: 72px 0;
+}
+
+.quote blockquote {
+    text-align: center;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    margin: 0 48px 32px;
+}
+
+.quote p {
+    text-align: right;
+    margin: 0 48px 0;
+}
